# image-materials

./: .gitignore  CONTRIBUTING.md  LICENCE.md  README.md  preprocessing_format.md  pylintrc  pyproject.toml  requirements.txt  units.txt  q
.github/workflows/: ci.yml
Basic_Stock_Model/: dynamic_stock_model_BM.py  prism_stock_basic_model.py
Fossil_test_check/: ffconstants.py  fftest.py
Fossil_test_check/Coal/: coal_lifetimes.csv  coal_material intensity(kg_kg per year).csv
Fossil_test_check/Extraction/: Extraction_materials.csv  FF Intensity & LT - Extraction lifetimes.csv  FF Intensity & LT - Extraction material intensity.csv
Fossil_test_check/Pipelines/: Pipelines_materials.csv
Fossil_test_check/Processing/: FF Intensity & LT - Processing Lifetimes.csv  FF Intensity & LT - Processing materials.csv
Fossil_test_check/Transport/: FF Intensity & LT - Transport Material Intensity.csv
Fossil_test_check/stock_calculation/: fuma.py
IMAGE-Mat/scripts/: Electricity_sector_new.py  Vehicle_Material_Model.py  grid_materials.py
IMAGE-Mat_old_version/IMAGE-Mat/: result_formatting_irp_template.py  result_plots_overarching_irp_update.py
docs/: PYTHON_HOWTO.md
docs/source/: about.rst  conf.py  index.rst  installation.rst  licence.rst  models.rst  quickstart.rst  whatisimagematerials.rst
examples/: .gitattributes  batteries.ipynb  batteries_test.ipynb  buildings.ipynb  buildings_preprocessing.ipynb  buma_preprocessing.ipynb  buma_test.ipynb  combined.ipynb  combined_elect.ipynb  combined_scenarios copy.ipynb  combined_scenarios.ipynb  constants_BUMA.py  electricity.ipynb  floorspace.py  fossil.ipynb  iam_reporting.ipynb  image_materials_steel.csv  infrastructure.ipynb  lifetimes.py  population.ipynb  population.py  reporting.ipynb  rest_of.ipynb  test_commercial_buildings.ipynb  test_notebook.ipynb  test_notebook_comparison.ipynb  total_material_Aluminium.csv  total_material_Copper.csv  total_material_Steel.csv  units_test.ipynb  util.py  vary_model_input.ipynb  vehicles.ipynb  vema_profile.py  vema_script.py
imagematerials/: __main__.py  _version.py  battery.py  changedata.py  concepts.py  constants.py  distribution.py  factory.py  iamc_config.py  maintenance.py  model.py  preprocessing.py  read_mym.py  reporting.py  stock.py  survival.py  units.txt  util.py
imagematerials/Scripts/: maintenance-analysis.ipynb
imagematerials/buildings/: __init__.py  building_materials.py  constants.py  util.py
imagematerials/electricity/: Electricity_sector_new.py  Electricity_sector_new_JT.py  Electricity_sector_restructured.py  Electricity_sector_restructured_oldstockmodelling.py  README.txt  __init__.py  battery_preprocessing.py  btm_test.py  constants.py  dynamic_stock_model.py  electr_external_data.py  electricity.py  graphs_elec.py  grid_materials_JT.py  grid_preprocessing.py  phs_test.py  preprocessing.py  script_test.py  script_test_xarray.py  storage_preprocessing.py  storage_test.py  utils.py
imagematerials/end_of_life/: __init__.py  constants.py
imagematerials/eol/: __init__.py  constants.py  preprocessing.py  recycling_scenarios.py
imagematerials/fossil_fuels/: ffconstants.py  fftest.py
imagematerials/infrastructure/: constants.py  infra_materials-v5.py  infrastructure.py  (+4 more)
prism-stock-classes/: Stock.py  VehicleMaterialDemand.py  dynamic_stock_calculation.py  material_calculation.py  stock.py  survival.py  test_notebook.ipynb  test_survival.py  util.py  vehicle_material_demand.py
scripts/: baseline targets.ipynb  lifetime_analysis.ipynb  lifetime_maintenance_scenarios.ipynb  lifetime_scenario.ipynb  maintenance-analysis.ipynb  rest.ipynb  run_pyan.py  scenario_slow.ipynb  vehicle_maintenance.ipynb  vehicle_maintenance_exploration.ipynb  vehicle_maintenance_for_publication.ipynb  vehicles_preprocessing_test.py
tests/: conftest.py  create_prep_summaries.py  test_concepts.py  test_distribution.py  test_integration.py  test_models.py  test_preprocessing.py  test_survival.py
(+1419 files in other folders)
