[build-system]
requires = ["setuptools>=70", "setuptools-scm[toml]>=6.2","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagematerials"
authors = [
    {name = "IMAGE Materials development team"}
]
description = "Package for IMAGE material calculations"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
# license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 3 - Alpha",
    # "License :: OSI Approved :: MIT License",
]

dependencies = [
    "prism>=0.7.8",
    "pandas<3.0",
    "xarray",
    "netCDF4",
    "pint",
    "numpy",
    "scipy",
    "scikit-learn",
    "pint-xarray>=0.6",
    "matplotlib"
]

dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/imagepbl/image-materials"
documentation = "https://github.com/imagepbl/image-materials"

[project.optional-dependencies]
test = [
    "pylint",
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-tqdm",
    "ruff"
    ]

docs = [
    "sphinx<8", "sphinx-rtd-theme", "sphinxcontrib-napoleon",
    "sphinx-autodoc-typehints", "sphinx_inline_tabs", "sphinx_copybutton",
]
all = [
    "imagematerials[test,docs]"
]

[tool.setuptools.packages.find]
include = ["imagematerials*"]

[tool.setuptools_scm]
write_to = "imagematerials/_version.py"

# [[tool.mypy.overrides]]
# module = [
#     "irods.*",
#     "importlib_metadata.*",
# ]
# ignore_missing_imports = true

[tool.ruff]
exclude = ["_version.py"]
line-length = 100
lint.select = ["D", "E", "F", "W", "I", "N"]
lint.ignore = ["D203", "D213"]
